# A-Dental-Order-Website

./: .gitignore  README.md  app.py  package-lock.json  pyproject.toml  tailwind.config.js  users.db
instance/: users.db  users.sqlite3
src/: input.css
static/: Login.js  Registration.js  ValidationSubmit.js  footer.js  output.css  validation.js  validationInput.js  validationSubmit.js
templates/: contact.html  index.html  layout.html  location.html  login.html  order.html  privacy.html  register.html  sign in.html  signIn.html  signUp.html  terms.html
